--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
 /* utility class */
+.bord {
+    border: 1px solid black;
+    height: 40px;
+}
 
+.h100 {
+    height: 100%;
+}
 
 
 
 /* end utility class  */
+
+
 .nav {
     background-color: #2c3e50;
     height: 80px;
@@ -11,30 +20,55 @@
 
 .jumbo {
     background-color: #1abc9c;
-    height: 200px;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
 }
 
 .profile {
     background-color: #ffffff;
-    height: 200px;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
 }
 
 .about {
     background-color: #1abc9c;
-    height: 200px;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
 }
 
 .contact {
     background-color: #ffffff;
-    height: 200px;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
 }
 
 .footer {
     background-color: #3a546d;
-    height: 80px;
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
 }
 
 .made {
     background-color: #2c3e50;
-    height: 30px;
+    height: 50px;
+}
+
+
+/* leyout jumnbo  */
+
+.jumbo .row > div {
+    text-align: center;
+}
+
+
+
+/* leyout profile  */
+
+h2 {
+    text-align: center;
 }
