--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,177 @@
+/* nav riscrittura */
+.bg-my {
+    background-color:#2c3e5d ;
+}
+
+.navbar-collapse {
+    flex-grow: 0;
+}
+
+.navbar-dark .navbar-toggler {
+    border: 1px #ccc solid;
+}
+
+/* riscrittura pulsante  */
+.btn-primary {
+    background-color: #1abc9c;
+    border-color: #1abc9c;
+}
+
+
 /* utility class */
 .bord {
     border: 1px solid black;
-    height: 40px;
 }
 
-.h100 {
-    height: 100%;
+.title {
+    text-align: center;
+    margin-top: 24px ;
+    margin-bottom: 24px;
 }
+
+.icon, .icon-b {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 24px;
+}
+
+
+.icon::before {
+    content: "";
+    display: block;
+    background-color: white;
+    width: 50px;
+    border: 1px solid white
+}
+
+.icon::after {
+    background-color: white;
+    content: "";
+    display: block;
+    width: 50px;
+    border: 1px solid white
+}
+
+.icon-b::before {
+    content: "";
+    display: block;
+    background-color: #333;
+    width: 50px;
+    border: 1px solid #333
+}
+
+.icon-b::after {
+    background-color: #333;
+    content: "";
+    display: block;
+    width: 50px;
+    border: 1px solid #333
+}
+
+.icon .fas.fa-star, .icon-b .fas.fa-star {
+    margin: 0 24px;
+}
+
 
 
 
 /* end utility class  */
 
 
-.nav {
-    background-color: #2c3e50;
-    height: 80px;
+.jumbo, .about {
+    background-color: #1abc9c;
+    padding-top: 24px;          
+    padding-bottom: 24px;      
+    color: white   
 }
 
 .jumbo {
-    background-color: #1abc9c;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
+    margin-top: 56px;
 }
 
-.profile {
+.profile, .contact {
     background-color: #ffffff;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
+    padding-top: 24px;          
+    padding-bottom: 24px;
+    color: #333;         
+
 }
 
 .about {
     background-color: #1abc9c;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
+    padding-top: 24px;          
+    padding-bottom: 24px;         
 }
 
 .contact {
     background-color: #ffffff;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
+    padding-top: 24px;          
+    padding-bottom: 24px;         
 }
 
 .footer {
     background-color: #3a546d;
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
+    color: white;
+    padding-top: 24px;          
+    padding-bottom: 24px;         
 }
 
 .made {
-    background-color: #2c3e50;
+    background-color: #2c3e5d;
     height: 50px;
 }
 
 
 /* leyout jumnbo  */
-
-.jumbo .row > div {
-    text-align: center;
+.jumbo img {
+    max-width: 200px;
+    margin-bottom: 24px;
 }
 
+.jumbo h1 {
+    margin-bottom: 24px;
+}
+
+.jumbo i {
+    margin-bottom: 0.5rem;
+}
 
 
 /* leyout profile  */
 
 h2 {
     text-align: center;
+    margin-bottom: 24px;
+}
+
+.profile img {
+    width: 100%;
+    margin-bottom: 24px;
+    border-radius: 10px;
+}
+
+
+/* leyout about  */
+
+
+
+/* leyout contac  */
+.contact input {
+    width: 100%;
+    border: 0;
+    border-bottom: 1px solid #555;
+    padding: 12px;
+}
+
+.contact textarea {
+    width: 100%;
+    border: 0;
+    border-bottom: 1px solid #555;
+    padding:12px;
+
+}
+
+.contact ::placeholder {
+    color: #333;
 }
