--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,10 @@
 
 .made {
     background-color: #2c3e5d;
-    height: 50px;
+    padding: 12px 0;
+    font-size: 0.7rem;
+    color: white;
+
 }
 
 
@@ -148,7 +151,7 @@ h2 {
 .profile img {
     width: 100%;
     margin-bottom: 24px;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 
@@ -175,3 +178,28 @@ h2 {
 .contact ::placeholder {
     color: #333;
 }
+
+/* leyout footer  */
+
+.footer a {
+    color: #1abc9c;
+
+}
+
+.footer i {
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    margin: 0 6px;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+@media screen and (max-width: 767px) {
+    .footer div:not(:first-child) h3 {
+        margin-top: 24px;
+    }
+
+    
+}
+
